--- a/src/App.css
+++ b/src/App.css
@@ -495,6 +495,14 @@ h6 {
   border-radius: 0.3rem;
   margin-right: 0.3rem;
 }
+input[type="radio"] {
+  display: none;
+}
+.star {
+  cursor: pointer;
+  transition: color 280ms;
+}
+
 .single-extra label {
   display: inline-block;
   font-size: 0.8rem;
